fix : RVC 실행시 발생하는 Detected chage in '경로', reloading 문제 해결

--- a/templates/rvc_option.html
+++ b/templates/rvc_option.html
@@ -14,12 +14,12 @@
     <h2>General Options</h2>
     <!-- SONG_INPUT -->
     <label for="songInput">음성 파일 경로 또는 YouTube 링크:</label>
-    <input type="text" id="songInput" name="SONG_INPUT" value="/content/drive/MyDrive/FIX/original_voice/ojtube.wav" required>
+    <input type="text" id="songInput" name="SONG_INPUT" value="" required>
     <br>
 
     <!-- RVC_DIRNAME -->
     <label for="rvcDirname">저장 디렉토리 이름:</label>
-    <input type="text" id="rvcDirname" name="RVC_DIRNAME" value="Jungkook" required>
+    <input type="text" id="rvcDirname" name="RVC_DIRNAME" value="" required>
     <br>
 
     <!-- PITCH_CHANGE -->
